--- a/tenement-api/src/main/resources/WEB-INF/index.html
+++ b/tenement-api/src/main/resources/WEB-INF/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="http://localhost:9876/file/upload" enctype="multipart/form-data">
-        <input name = "fileName" type = "file"><br>
+<form method="post" action="/house/room/uploadFile" enctype="multipart/form-data">
+        <input name = "file" type = "file"><br>
+    <input name = "file" type = "file"><br>
        <input type = "submit" value = "点击上传">
 </form>
 </body>
